[package]
name = "convent"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-utils = "0.6.6"

[dev-dependencies]
criterion = "0.3.0"
shrev = "1.1.1"
crossbeam = "0.7.2"
rand = "0.7.2"
static_assertions = "1.0.0"

[[bench]]
name = "basic"
harness = false
